syntax = 'proto3';

package loms;

option go_package = "route256/loms/pkg/loms";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service Loms {
    rpc CreateOrder(RequestCreateOrder) returns (ResponseCreateOrder) {
        option (google.api.http) = {
            post: "/createOrder"
            body: "*"
        };
    }

    rpc ListOrder(RequestListOrder) returns (ResponseListOrder) {
        option (google.api.http) = {
            get: "/listOrder"
        };
    }

    rpc OrderPayed(RequestOrderPayed) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/orderPayed"
            body: "*"
        };
    }

    rpc CancelOrder(RequestCancelOrder) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/cancelOrder"
            body: "*"
        };
    }

    rpc Stocks(RequestStocks) returns (ResponseStocks) {
        option (google.api.http) = {
            get: "/stocks"
        };
    }
}

message RequestCreateOrder {
    message OrderItem {
        uint32 sku = 1;
        uint64 count = 2;
    }

    int64 user = 1;
    repeated OrderItem items = 2;
}

message ResponseCreateOrder {
    int64 orderID = 1;
}

message RequestListOrder {
    int64 orderID = 1;
}

message ResponseListOrder {
    message OrderItem {
        uint32 sku = 1;
        uint64 count = 2;
    }

    string status = 1;
    int64 user = 2;
    repeated OrderItem items = 3;
}

message RequestOrderPayed {
    int64 orderID = 1;
}

message RequestCancelOrder {
    int64 orderID = 1;
}

message RequestStocks {
    uint32 sku = 1;
}

message ResponseStocks {
    message StockItem {
        int64 warehouseID = 1;
        uint64 count = 2;
    }

    repeated StockItem stocks = 1;
}
